> Intégration mobile +/- terminée, mais satisfaction par rapport au message en front page TRÈS limitée... > Certaines résolutions continuent de bugguer, je n'arrive pas à avoir le vrai résultat suivant le support utilisé > Cependant le reste est terminé > Au fait, le formulaire de contact fonctionne > Title rajouté sur chacun des titres > Mise en ligne du site dimanche maximum > config/environment/development.rb et config/initializers/smtp_settings.rb non rajoutés car contenant mes coordonnées de connexions

--- a/app/assets/stylesheets/base/variables.sass
+++ b/app/assets/stylesheets/base/variables.sass
@@ -3,12 +3,12 @@
 $ruby: #b02a35
 
 h1, h2, h3, h4, h5, h6
-  font-family: 'Montserrat-Regular', sans-serif
-  color: white
+  font-family: 'Montserrat-Regular', sans-serif !important
+  color: white !important
 
 p, a
   font-family: 'Lato-Regular', sans-serif
-  color: #fff
+  color: #fff !important
   font-size: 1em
 
 a
@@ -24,3 +24,6 @@ a
 
     &:hover
       background: none
+
+body
+  background-color: #3c3c3c !important
