--- a/app/assets/stylesheets/resp/767.sass
+++ b/app/assets/stylesheets/resp/767.sass
@@ -1,1 +1,89 @@
-@media screen and (min-width: 767px)
+@media screen and (max-width: 767px)
+  
+  .navbar-right
+    float: right
+
+  .landing
+    background-attachment: scroll
+
+  .container
+    text-align: center
+    top: 15%
+    left: 48%
+
+  .title
+    font-size: 50px
+    line-height: 44px
+
+  .detail
+    background-attachment: scroll
+
+    &-body
+      margin-top: 0
+
+      &:first-child
+        padding-top: 5vh
+
+    &-desc
+      padding: 0
+
+    &-linkblock
+      padding-bottom: 3em
+
+  .footer-block:last-child .footer-block-link
+    text-align: center
+
+  .articles
+    &-body
+      padding: 2em 0
+      margin: 0
+
+      &-illu
+        background-attachment: scroll
+
+      &-header
+        text-align: center
+
+        & h1
+          text-align: center !important
+        & h5
+          font-size: 10px
+
+      &-each
+        padding: 1px 1px
+
+    &-latest
+      margin-top: 3em
+
+    &-header
+      margin-bottom: 1em
+
+
+
+  .bloc
+    height: 290px
+    margin-bottom: 30px
+
+  .misc-actions
+    margin: 2% 0 3% 3%
+
+  .portfolio-body
+    display: block
+    justify-content: initial
+
+    &-left,
+    &-right
+      width: 100%
+
+    &-right
+      padding-right: 0
+
+      &-link
+        margin: 2em 0
+
+  .contacts
+    &-form
+      margin-top: 0
+
+    &-submit
+      margin-bottom: 1em
