--- a/app/assets/stylesheets/resp/992.sass
+++ b/app/assets/stylesheets/resp/992.sass
@@ -2,8 +2,8 @@
   .navbar-header 
     float: none
 
-  .navbar-left,.navbar-right 
-    float: none !important
+  .navbar-right
+    text-align: right
 
   .navbar-toggle 
     display: block
@@ -19,8 +19,8 @@
   .navbar-collapse.collapse 
     display: none!important
 
-  .navbar-nav 
-    float: none!important
+  .navbar-nav
+    display: inline-block
     margin-top: 7.5px
 
   .navbar-nav>li 
